index.html angepasst!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <script src="sketch.js"></script>
     <script src="mouseandkeys.js"></script>
     <script src="board.js"></script>
-    <script src="validation.js"></script>
+    <script src="duplicatesvalidation.js"></script>
   </body>
 </html>
